--- a/static/less/content.less
+++ b/static/less/content.less
@@ -59,10 +59,8 @@
 	@media screen and (max-width: 600px) {
 
 		.close {
-			top: 4px;
-			right: 4px;
-			width: 26px;
-			height: 26px;
+			top: 8px;
+			right: 8px;
 		}
 
 		h2 {
